# ChangeLog for net-analyzer/bmon
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/bmon/ChangeLog,v 1.58 2014/08/15 19:23:50 jer Exp $

  15 Aug 2014; Jeroen Roovers <jer@gentoo.org> -bmon-2.1.1_pre1.ebuild,
  -files/bmon-2.1.0-gcc4.diff, -files/bmon-2.1.0-libnl-1.0.patch,
  -files/bmon-2.1.0-nostrip.patch, -files/bmon-2.1.0-sysfs-symlink.patch,
  -files/bmon-2.1.1-verbose.patch, metadata.xml:
  Old.

  26 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> bmon-3.2.ebuild:
  x86 stable wrt bug #516862

  22 Jul 2014; Chema Alonso <nimiux@gentoo.org> bmon-3.2.ebuild:
  Stable for amd64 wrt bug #516862

  12 Jul 2014; Jeroen Roovers <jer@gentoo.org> bmon-3.2.ebuild:
  Stable for HPPA (bug #516862).

  12 Jul 2014; Jeroen Roovers <jer@gentoo.org> bmon-3.2.ebuild:
  Add an error message for the CONFIG_NET_SCHED check.

  16 Jun 2014; Jeroen Roovers <jer@gentoo.org> bmon-3.2.ebuild:
  Check for CONFIG_NET_SCHED (bug #513466 by Thomas D.).

  28 Feb 2014; Jeroen Roovers <jer@gentoo.org> -bmon-2.1.0-r3.ebuild,
  bmon-2.1.1_pre1.ebuild:
  Stable for HPPA (bug #503034).

*bmon-3.2 (28 Feb 2014)

  28 Feb 2014; Jeroen Roovers <jer@gentoo.org> +bmon-3.2.ebuild:
  Version bump.

  28 Feb 2014; Sergey Popov <pinkbyte@gentoo.org> bmon-2.1.1_pre1.ebuild:
  Stable on amd64 and x86, wrt bug #503034

  28 Feb 2014; Sergey Popov <pinkbyte@gentoo.org> bmon-2.1.1_pre1.ebuild:
  Add virtual/pkgconfig dependency due to last change

  28 Feb 2014; Sergey Popov <pinkbyte@gentoo.org> bmon-2.1.1_pre1.ebuild:
  Fix linking with sys-libs/ncurses[tinfo], add epatch_user

  01 Feb 2013; Jeroen Roovers <jer@gentoo.org> bmon-2.1.1_pre1.ebuild,
  +files/bmon-2.1.1-verbose.patch:
  Verbose build.

  06 Mar 2012; Jeroen Roovers <jer@gentoo.org> bmon-2.1.0-r3.ebuild,
  bmon-2.1.1_pre1.ebuild:
  New HOMEPAGE.

  27 Oct 2011; Jeroen Roovers <jer@gentoo.org> bmon-2.1.0-r3.ebuild,
  bmon-2.1.1_pre1.ebuild: