@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure prepare setup
+DEPEND=>=sys-libs/ncurses-5.3-r2 dev-libs/confuse dev-libs/libnl:3 virtual/pkgconfig !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DESCRIPTION=interface bandwidth monitor
+EAPI=5
+HOMEPAGE=http://www.infradead.org/~tgr/bmon/
+KEYWORDS=~amd64 ~hppa ~ppc ~sparc ~x86
+LICENSE=MIT
+RDEPEND=>=sys-libs/ncurses-5.3-r2 dev-libs/confuse dev-libs/libnl:3
+SLOT=0
+SRC_URI=https://codeload.github.com/tgraf/bmon/tar.gz/v3.6 -> bmon-3.6.tar.gz
+_eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	libtool	52d0e17251d04645ffaa61bfdd858944	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=ea8015b49cb6c91b6e4a23d42544a624
