@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST bmon-3.2.tar.gz 55660 SHA256 1608aa8c5a55763c216d80069e0ef3afbcf0f5349acca34f7d5ece0551b231ea SHA512 a5017a8924f8ac5eaf9f671a8494302081050aab14f629f863eecccd01ea1f4a223b3f8ce4deb4304d5904dd99acca92e973ba503167d3805641d88ddbb938ce WHIRLPOOL 362f38610ccb1bf0943f3d56d0f95b88febada0e90729f0021c1265b259765df922281a2e173561366c36135969d209e48c950f66bc3116404e77a1f3afd2593
+DIST bmon-3.6.tar.gz 57883 SHA256 7d9d9b5af751cb61e267b43309506f03e82636282742fce89209f2378ae6a4b1 SHA512 e0c3d828d5391511ea52b1058a22f5eea250c5221664a7c05d7c36fabc361905dcc6cb97184ba0f366e4fe710e33816f72ad59a5856b90265a6b1a415de319e7 WHIRLPOOL d6eaf1b94f6a3dc7d16afe03146a2f8c67514c5fd9cf2956a89f5da6730d329e474b98d6cf3f6138e19e3e1d063aa4b69f325f478b63f8d4bb6fb6b708d13570
 EBUILD bmon-3.2.ebuild 940 SHA256 d0a1ea1f62a43abd612de6a0a0312d430456280d772790219b14e9e8d5825dbf SHA512 69e876e9025ed0bb95842508dd48559d7f0a8cee469279ff283b0c33c288922e0521cb8be62a2e71afaf09e603b820cbbc17781f939e7dd8333b40bed2ece6a4 WHIRLPOOL 84f75ebaad0413d58955bb056d8e175206aa1dcdc3a3b6983f4e2852f48aef6969d78b454b840f1b8d8740e3f5ff890b74d6f5456b3a7147d3c104c2ec3b7be5
-MISC ChangeLog 7638 SHA256 fda3ae00fcbc066cbd481e245daff2c057d299636ee854b60e2314c10773bd8e SHA512 a94b5f1bf43e128ef2241a95fbc091b513035b6890bdc22de7b0ebc84cbe6aa302753803ed79034152fbeb2fdd23ba56080239b9b329c7bd56bdd9caa402630e WHIRLPOOL 607ab426e7c65a81fbe4b6c4b85aa70ebb75f94bdcf55474ab5cef36145ca930533b96b10e5805e344e052d761251bd8d5ff9e27fb4cdbf37c83ea305a3ab036
+EBUILD bmon-3.6.ebuild 936 SHA256 e846d9938872c04c8c6cc9ee42cf9503d3279ce0912e158fae17b62c4cd728a2 SHA512 f1776acb775f089c3127c6cfae3c67eda83042630f2925b849aeba849ebc1ed630238142b55140a1dd2eeaa36e46bfdee029daad9e33427bb99ead03401bb1e8 WHIRLPOOL 67002b6e07fd92bb8478f19a894c818088dd4d6685e10498b89325104c1f0085b1dd0caeb76b87ed751a8f186041ef6859c20630adfc2d00d4133854f74271d4
+MISC ChangeLog 7745 SHA256 8268d9bfac4efc713b1f940dcafdc35d9a73049586ba9c51746a918de9df2605 SHA512 ffa9fbe80128f99bb8dfac2de7e85222a0f2d3e778e8be19929e399a4a2615377465983cf95df09cf3e5967efae07213b0a56788a4a1d8117bf8af80bde7324a WHIRLPOOL 06048a560d03507488dd3f8e622834657fa7f473005a5f9274d6caec8b51a98af7c6acf1358dd8a340973977dad2b91deaa9f00f1d35ab454f8add0880ee3002
 MISC metadata.xml 159 SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6 SHA512 2c104d2a804da0a38770b6f1ec26cd5b0a49e30392177d5794734a3f4129e82fd0971e5a8a1e48913bfaf1bab57e7bac1fe5ce4f5c618ce057aa5aaf9e59113b WHIRLPOOL 044dec64f8899582332d7fbd7612d2a7c5c7234c44bb9fc51a56f7d6400cd3066a154c3c49dd3f4b468f11e029aa24ff0097ab1387b9f322d57f1d9876afd601
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPuXkcACgkQVWmRsqeSphOcIwCfbKdGpCSPXS7l8hROprPftM1J
-kMEAn3W3f2GrZhDKa1e0C83iExeBRohA
-=bt2w
+iEYEAREIAAYFAlTmNoUACgkQVWmRsqeSphMRcQCfZYd9g9fjESsSNtu80vGhTD3/
+esQAmwYSA4DBi1CxBa4WSBSOyVgPwaWL
+=xWz7
 -----END PGP SIGNATURE-----
